# TECHNOPARK_C_CPP

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  alloc_traits.h.gcov  basic_string.h.gcov  basic_string.tcc.gcov  char_traits.h.gcov  contracts.c  coverage.info  gtest-internal.h.gcov  gtest-message.h.gcov  gtest-port.h.gcov  gtest-printers.h.gcov  gtest.h.gcov  ios_base.h.gcov  iostream.gcov  main.c  main_with_dyn.c  main_with_static.c  message.c  message.h  move.h.gcov  new_allocator.h.gcov  ptr_traits.h.gcov  statictic_cpp.h  statistic.c  statistic.h  stl_iterator_base_funcs.h.gcov  stl_iterator_base_types.h.gcov  structs.h  test_input  tests_gtest.cpp  tests_gtest.cpp.gcov  type_traits.h.gcov  user_messages.c  user_messages.h
common/: mes_sort.c  mes_sort.h  message.c  message.h
dyn_lib/: CMakeLists.txt  d_user_messages.c  d_user_messages.h
include_cpp/: cpp_d_user_messages.h  cpp_mes_sort.h  cpp_message.h  cpp_s_user_messages.h
mes/: message.c  message.h
static_lib/: CMakeLists.txt  s_user_messages.c  s_user_messages.h
